--- a/public/css/zoonotic.css
+++ b/public/css/zoonotic.css
@@ -19,7 +19,8 @@ html {
   bottom: 2.8646vw;
   left: 14.0625vw;
   z-index: 3;
-  width: 20vw;
+  /* width: 20vw; */
+  width: 40vh;
 }
 
 .gina img {
@@ -35,7 +36,8 @@ html {
 }
 
 .ilyas {
-  width: 17vw;
+  /* width: 17vw; */
+  width: 33vh;
   bottom: 0;
   right: 19.792vw;
   z-index: 3;
