--- a/public/css/base.css
+++ b/public/css/base.css
@@ -7,7 +7,7 @@ body {
   font-size: 1vw;
   font-family: Arial, Helvetica, sans-serif;
   background: url(/img/bg-body.jpg) 0 0 repeat-y;
-  border: 0px solid black;
+  border: 1px solid black;
 
   overflow: hidden;
   background: url(../img/bg.jpg) 0 0 no-repeat;
@@ -44,9 +44,9 @@ body {
 }
 
 .content-wrap {
-  /* width: 80vw;
+  width: 80vw;
   border: 0px solid red;
-  margin: auto; */
+  margin: auto;
 }
 
 .imgw {
