--- a/public/css/overview.css
+++ b/public/css/overview.css
@@ -1,20 +1,23 @@
 .bg {
   background: url(../../img/overview/bg.png) center top no-repeat;
   background-size: 90% 100%;
-  padding: 3rem 0 0 0;
+  /* padding: 3rem 0 0 0; */
   border: 0px solid red;
+  height: 75vh;
 }
-
+.content-wrap {
+  width: 70%;
+}
 .content {
   width: 38vw;
-  margin-top: 2rem;
+  margin-top: 6%;
 }
 
 .content h1 {
-  font-size: 2.8rem;
+  font-size: 2.5rem;
 }
 .content h1 span {
-  font-size: 150%;
+  font-size: 120%;
 }
 .bar {
   width: 100%;
@@ -61,16 +64,16 @@
 
 @media only screen and (max-height: 480px) {
   .bg {
-    background-size: 90% 100%;
-    padding: 3rem 0 0 0;
+    /* background-size: 90% 100%;
+    padding: 3rem 0 0 0; */
   }
   .content {
-    width: 60%;
-    margin-top: 3rem;
+    /* width: 60%;
+    margin-top: 3rem; */
   }
   .bar {
-    width: 100%;
-    margin-bottom: -3rem;
+    /* width: 100%; */
+    /* margin-bottom: -3rem; */
   }
 
   /* .ladybird {
