--- a/public/css/zoonotic.css
+++ b/public/css/zoonotic.css
@@ -64,9 +64,8 @@ html {
   background-size: 100% auto;
   /* width: 100%; */
   /* max-width: 600px; */
-  /* padding: 35px 0; */
-  width: 60vw;
-  margin-top: 5%;
+  width: 50vw;
+  /* margin-top: 5%; */
 }
 
 /* tryout */
