--- a/public/css/base.css
+++ b/public/css/base.css
@@ -203,13 +203,14 @@ button:active {
   /* min-width: 60.938vw; */
   min-width: 58vw;
   /* width: 100%; */
-  margin: auto;
+  margin: 5vh auto auto auto;
 }
 .custom-modal .modal-content {
   background-image: url(/img/popup/bg.png);
   background-size: 100% 100%;
   background-color: unset;
-  min-height: 46.094vw;
+  /* min-height: 46.094vw; */
+  min-height: 80vh;
   background-position: center;
   background-repeat: no-repeat;
   border: 0px solid #000;
