--- a/public/css/base.css
+++ b/public/css/base.css
@@ -199,6 +199,9 @@ button:active {
 }
 
 /* popup */
+.custom-modal {
+  overflow: hidden;
+}
 .custom-modal .modal-dialog {
   min-width: 60.938vw;
 
@@ -210,7 +213,7 @@ button:active {
   background-size: 100% 100%;
   background-color: unset;
   /* min-height: 46.094vw; */
-  min-height: 80vh;
+  min-height: 85vh;
   background-position: center;
   background-repeat: no-repeat;
   border: 0px solid #000;
