--- a/public/css/pandemics.css
+++ b/public/css/pandemics.css
@@ -99,9 +99,9 @@ html {
   /* margin-top: 2.6042vw; */
 }
 
-/* #fact_pop img {
-  width: 40%;
-} */
+#fact_pop img {
+  width: 47%;
+}
 .outbreak-modal-content {
   display: flex;
   color: #000;
