--- a/public/css/pandemics.css
+++ b/public/css/pandemics.css
@@ -99,8 +99,8 @@ html {
   /* margin-top: 2.6042vw; */
 }
 
-#fact_pop img {
-  width: 50%;
+#fact_pop .header-img {
+  width: 40%;
 }
 .outbreak-modal-content {
   display: flex;
