--- a/public/css/base.css
+++ b/public/css/base.css
@@ -234,6 +234,7 @@ button:active {
   background-position: center;
   background-repeat: no-repeat;
   border: 1px solid #000;
+  margin-top: 5%;
 }
 
 .custom-modal .modal-body {
