--- a/public/css/pandemics.css
+++ b/public/css/pandemics.css
@@ -247,6 +247,10 @@ html {
   margin: 0.4167vw 0.4167vw 0.4167vw 0.9375vw;
 }
 
+#fact_pop .header-img {
+  width: 50%;
+}
+
 @media only screen and (max-height: 420px) {
   #fact_pop .header-img {
     width: 40% !important;
