--- a/public/css/pandemics.css
+++ b/public/css/pandemics.css
@@ -247,12 +247,12 @@ html {
   margin: 0.4167vw 0.4167vw 0.4167vw 0.9375vw;
 }
 
-#fact_pop .header-img {
+#fact_pop .pop-img {
   width: 50%;
 }
 
-@media only screen and (max-height: 420px) {
-  #fact_pop .header-img {
+@media only screen and (max-height: 480px) {
+  #fact_pop .pop-img {
     width: 40% !important;
     border: 0px solid red;
   }
