--- a/public/css/zoonotic.css
+++ b/public/css/zoonotic.css
@@ -229,3 +229,21 @@ html {
 
 @media only screen and (max-height: 480px) {
 }
+
+/* ipad */
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  .gina {
+    left: 3vw;
+  }
+  .gina .bubble {
+    left: 26vw;
+  }
+
+  .ilyas {
+    right: 13vw;
+  }
+
+  .ilyas .bubble {
+    top: 25vw;
+  }
+}
