--- a/public/css/vaccines.css
+++ b/public/css/vaccines.css
@@ -219,3 +219,21 @@ html {
     width: 5% !important;
   }
 }
+
+/* ipad */
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  .gina {
+    left: 3vw;
+  }
+  .gina .bubble {
+    left: 26vw;
+  }
+
+  .ilyas {
+    right: 13vw;
+  }
+
+  .ilyas .bubble {
+    top: 28vw;
+  }
+}
