--- a/public/css/pandemics.css
+++ b/public/css/pandemics.css
@@ -258,7 +258,7 @@ html {
   }
 }
 
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
   .gina {
     left: 3vw;
   }
