--- a/public/css/pandemics.css
+++ b/public/css/pandemics.css
@@ -261,6 +261,7 @@ html {
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
   .gina {
     left: 3vw;
+    border: 1px solid red;
   }
   .gina .bubble {
     left: 24vw;
