--- a/public/css/toolsandtechniques.css
+++ b/public/css/toolsandtechniques.css
@@ -124,7 +124,7 @@ html {
 }
 
 /* ipad */
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+@media (min-width: 768px) {
   .ilyas {
     left: 3vw;
   }
