--- a/public/css/covid.css
+++ b/public/css/covid.css
@@ -13,7 +13,8 @@ html {
 
 .gina {
   bottom: 2.8646vw;
-  left: 10vw;
+  /* left: 10vw; */
+  left: 7%;
   z-index: 3;
   /* width: 20vw; */
   width: 40vh;
@@ -29,7 +30,8 @@ html {
   position: absolute;
   /* top: -1.25vw; */
   bottom: 3.75vw;
-  left: 15vw;
+  /* left: 15vw; */
+  left: 90%;
   min-width: 34.781vw;
   font-size: 1.28vw;
 }
@@ -38,7 +40,8 @@ html {
   /* width: 17vw; */
   width: 33vh;
   bottom: 0;
-  right: 19.792vw;
+  /* right: 19.792vw; */
+  right: 17%;
   z-index: 3;
 }
 
@@ -52,8 +55,8 @@ html {
   position: absolute;
   /* top: 18.8438vw; */
   /* left: -24.7917vw; */
-  top: -3.1562vw;
-  left: -28.7917vw;
+  top: 0;
+  left: -180%;
   min-width: 31.781vw;
   font-size: 1.28vw;
 }
@@ -153,7 +156,7 @@ html {
 
 /* ipad */
 @media (min-width: 768px) {
-  .gina {
+  /* .gina {
     left: 3vw;
   }
   .gina .bubble {
@@ -167,7 +170,7 @@ html {
   .ilyas .bubble {
     top: 0vw;
     left: -31vw;
-  }
+  } */
 
   .man {
     position: absolute;
