--- a/public/css/overview.css
+++ b/public/css/overview.css
@@ -3,7 +3,7 @@
   background-size: 90% 100%;
   /* padding: 3rem 0 0 0; */
   border: 0px solid red;
-  height: 75vh;
+  /* height: 75vh; */
 }
 .content-wrap {
   width: 70%;
