--- a/public/css/nipah.css
+++ b/public/css/nipah.css
@@ -36,7 +36,8 @@ html {
   /* width: 16vw; */
   width: 33vh;
   bottom: 0;
-  right: 19.792vw;
+  /* right: 19.792vw; */
+  right: 10%;
   z-index: 3;
 }
 
@@ -51,7 +52,7 @@ html {
   /* top: 15.8438vw;
   left: -18.7917vw; */
   top: 50%;
-  left: -120%;
+  left: -80%;
 }
 
 /* spotlight */
