--- a/public/css/overview.css
+++ b/public/css/overview.css
@@ -35,7 +35,7 @@
   font-weight: bold;
   top: -9vh;
   right: -2vw;
-  font-family: sriracha;
+  font-family: signika;
   width: 15vw;
 }
 .ladybird {
