--- a/public/css/fonts/index.css
+++ b/public/css/fonts/index.css
@@ -10,11 +10,26 @@
     /* Modern Browsers */ url("./tenby-five/tenby-five.woff2") format("woff2"); /* Modern Browsers */
 }
 
+@font-face {
+  font-family: "Signika-Regular";
+  src: url("./Signika-Regular/Signika-Regular.eot"); /* IE9 Compat Modes */
+  src: url("./Signika-Regular/Signika-Regular.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("./Signika-Regular/Signika-Regular.otf")
+      format("opentype"),
+    /* Open Type Font */ url("./Signika-Regular/Signika-Regular.svg")
+      format("svg"),
+    /* Legacy iOS */ url("./Signika-Regular/Signika-Regular.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */ url("./Signika-Regular/Signika-Regular.woff")
+      format("woff"),
+    /* Modern Browsers */ url("./Signika-Regular/Signika-Regular.woff2")
+      format("woff2"); /* Modern Browsers */
+}
+
 .tenbyfive {
   font-family: tenbyfive;
 }
-.sriracha {
-  /* font-family: sriracha; */
-  font-family: "Signika Negative";
-  font-weight: 600;
+.signika {
+  font-family: "Signika-Regular";
 }
